Avoid unexpected page breaks in print version
- Tweak media breakpoint values

--- a/assets/less/print.less
+++ b/assets/less/print.less
@@ -1,4 +1,8 @@
 @media print {
+    * {
+      page-break-inside: avoid;
+    }
+
     a[href]:after {
       content: none !important;
     }
