--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -29,8 +29,8 @@
 @theme-label-bg: lighten(@theme-blue, 15%);
 
 // Breakpoints
-@screen-desktop: 1024px;
-@screen-tablet: 840px;
+@screen-desktop: 1424px;
+@screen-tablet: 1024px;
 @screen-phone: 480px;
 
 //Layout
